--- a/src/htdocs/css/_helpPane.scss
+++ b/src/htdocs/css/_helpPane.scss
@@ -1,33 +1,69 @@
 #helpPane {
-  ol > li {
-    font-size: 1.2rem;
-    margin: 1em 0 1.5em 0;
+  ol {
+    counter-reset: item;
+    list-style: none;
+    margin: -.75em 0 0;
+    padding: 0;
+
+    h3 {
+      display: inline-block;
+      font-size: 1.3em;
+      line-height: 1.3;
+      margin: 0;
+    }
+
+    p, ul, h3, h4, img {
+      margin-left: 33px;
+    }
+
+    & > li {
+      counter-increment: item;
+      margin: 2em 0;
+      position: relative;
+
+      &:before {
+        background: #322646;
+        border-radius: 50%;
+        color: #fff;
+        content: counter(item);
+        display: inline-block;
+        position: absolute;
+        font-size: 17px;
+        height: 25px;
+        left: 0;
+        line-height: 1;
+        margin-right: 8px;
+        padding-top: 4px;
+        text-align: center;
+        top: 0;
+        width: 25px;
+      }
+    }
   }
 
-  p {
-    margin: .5em 0;
-  }
-  p,
-  ul > li {
-    font-size: 1rem;
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
   }
 
   .eventid {
-    display: block;
-    margin: .25em 0;
     max-height: 36px;
-    max-width: 100%;
+    max-width: 90%;
   }
 
   .find {
-    list-style: none;
-    margin: -1em 0 1em;
-    padding: 0;
+    margin-top: -.5em;
   }
 
   .github {
     border-top: 1px solid #eee;
     margin-top: 1.5em;
     padding: 4px 0;
+  }
+
+  .navbutton {
+    font-style: normal;
+    text-transform: uppercase;
   }
 }
