--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -50,9 +50,10 @@ $total-bg-color: #f7f7f7;
   }
 
   time.updated {
-    display: block;
-    margin: 1em 1em 0;
-    text-align: right;
+    margin: 0 1em;
+    position: absolute;
+    right: 0;
+    top: 3rem;
 
     &:before {
       content: 'Updated: ';
