add Legend html skeleton

--- a/src/htdocs/css/_helpPane.scss
+++ b/src/htdocs/css/_helpPane.scss
@@ -47,6 +47,17 @@
     padding: 0;
   }
 
+  .content {
+    div {
+      padding-right: 1em;
+    }
+
+    &:first-child {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
   .eventid {
     max-height: 36px;
     max-width: 90%;
