change color or number bullets

--- a/src/htdocs/css/_helpPane.scss
+++ b/src/htdocs/css/_helpPane.scss
@@ -22,7 +22,7 @@
       position: relative;
 
       &:before {
-        background: #322646;
+        background: #4dad3d;
         border-radius: 50%;
         color: #fff;
         content: counter(item);
