--- a/src/htdocs/css/_helpPane.scss
+++ b/src/htdocs/css/_helpPane.scss
@@ -1,9 +1,46 @@
 #helpPane {
-  ol {
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .aftershocks, .magnitude, .intensity {
+    display: block !important;
+  }
+
+  .column {
+    padding-right: 2em;
+
+    &:last-child {
+      padding: 0;
+    }
+  }
+
+  .columns {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .eventid {
+    max-height: 36px;
+    max-width: 90%;
+  }
+
+  .find {
+    margin-top: -.5em;
+  }
+
+  .github {
+    border-top: 1px solid #eee;
+    margin: 1.5em 0 0;
+    padding: 4px 0;
+  }
+
+  .instructions {
     counter-reset: item;
     list-style: none;
     margin: -.75em 0 0;
-    padding: 0;
 
     h3 {
       display: inline-block;
@@ -41,36 +78,29 @@
     }
   }
 
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+  .legend {
+    font-family: $font-family-headers;
+    max-width: 16em;
 
-  .content {
-    div {
-      padding-right: 1em;
+    img {
+      max-width: 100%;
     }
-
-    &:first-child {
+    li {
+      align-items: center;
       display: flex;
-      flex-wrap: wrap;
+      justify-content: space-between;
     }
-  }
+    > li {
+      border-top: 1px solid #f8f8f8;
+      padding: 0.5em 0;
 
-  .eventid {
-    max-height: 36px;
-    max-width: 90%;
-  }
-
-  .find {
-    margin-top: -.5em;
-  }
-
-  .github {
-    border-top: 1px solid #eee;
-    margin-top: 1.5em;
-    padding: 4px 0;
+      &:first-child {
+        border: none;
+      }
+    }
+    ul {
+      margin-left: .5em;
+    }
   }
 
   .navbutton {
