--- a/src/htdocs/css/_helpPane.scss
+++ b/src/htdocs/css/_helpPane.scss
@@ -1,5 +1,5 @@
 #helpPane {
-  ul {
+  ol, ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -39,8 +39,7 @@
 
   .instructions {
     counter-reset: item;
-    list-style: none;
-    margin: -.75em 0 0;
+    margin-top: -.5em;
 
     h3 {
       display: inline-block;
@@ -83,6 +82,7 @@
     max-width: 16em;
 
     img {
+      margin: 0.3em .2em;
       max-width: 100%;
     }
     li {
@@ -91,7 +91,7 @@
       justify-content: space-between;
     }
     > li {
-      border-top: 1px solid #f8f8f8;
+      border-top: 1px solid #f6f6f6;
       padding: 0.5em 0;
 
       &:first-child {
@@ -99,6 +99,24 @@
       }
     }
     ul {
+      color: #666;
+    }
+  }
+
+  .mags {
+    align-items: center;
+    color: #666;
+    display: flex;
+    font-size: .88em;
+    justify-content: space-around;
+    margin: .25em 0;
+
+    &:before {
+      content: '0';
+      margin-right: .5em;
+    }
+    &:after {
+      content: '7';
       margin-left: .5em;
     }
   }
