--- a/src/htdocs/css/_helpPane.scss
+++ b/src/htdocs/css/_helpPane.scss
@@ -5,10 +5,6 @@
     padding: 0;
   }
 
-  .aftershocks, .magnitude, .intensity {
-    display: block !important;
-  }
-
   .column {
     padding-right: 2em;
 
@@ -24,7 +20,7 @@
 
   .eventid {
     max-height: 36px;
-    max-width: 90%;
+    max-width: 100%;
   }
 
   .find {
@@ -33,28 +29,17 @@
 
   .github {
     border-top: 1px solid #eee;
-    margin: 1.5em 0 0;
-    padding: 4px 0;
+    margin: 2em 0 0;
+    padding-top: 4px;
   }
 
-  .instructions {
+  .iconlist {
     counter-reset: item;
-    margin-top: -.5em;
 
-    h3 {
-      display: inline-block;
-      font-size: 1.3em;
-      line-height: 1.3;
-      margin: 0;
-    }
-
-    p, ul, h3, h4, img {
-      margin-left: 33px;
-    }
-
-    & > li {
+    > li {
       counter-increment: item;
       margin: 2em 0;
+      padding-left: 33px;
       position: relative;
 
       &:before {
@@ -62,63 +47,86 @@
         border-radius: 50%;
         color: #fff;
         content: counter(item);
-        display: inline-block;
         position: absolute;
         font-size: 17px;
         height: 25px;
         left: 0;
         line-height: 1;
-        margin-right: 8px;
         padding-top: 4px;
         text-align: center;
         top: 0;
         width: 25px;
       }
+      &:first-child {
+        margin-top: 1em;
+      }
+      &:last-child {
+        margin-bottom: 1em;
+      }
+    }
+  }
+
+  .instructions {
+    h3 {
+      font-size: 1.25em;
+      line-height: 1.4;
+      margin: 0;
     }
   }
 
   .legend {
     font-family: $font-family-headers;
-    max-width: 16em;
+    max-width: 17em;
 
-    img {
-      margin: 0.3em .2em;
-      max-width: 100%;
-    }
-    li {
-      align-items: center;
-      display: flex;
-      justify-content: space-between;
-    }
-    > li {
+    h2 + ul > li {
       border-top: 1px solid #f6f6f6;
       padding: 0.5em 0;
 
       &:first-child {
         border: none;
+        padding-top: 0;
       }
     }
-    ul {
+
+    img {
+      margin: 0.3em .2em;
+      max-width: 100%;
+    }
+
+    li {
+      align-items: center;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .aftershocks {
+      ul {
+        color: #666;
+      }
+    }
+
+    .aftershocks, .magnitude, .intensity {
+      display: block;
+    }
+
+    .mags {
+      align-items: center;
       color: #666;
-    }
-  }
+      display: flex;
+      font-size: .9em;
+      justify-content: space-around;
+      margin: .25em 0;
 
-  .mags {
-    align-items: center;
-    color: #666;
-    display: flex;
-    font-size: .88em;
-    justify-content: space-around;
-    margin: .25em 0;
+      &:before {
+        content: '0';
+        margin-right: .5em;
+      }
+      &:after {
+        content: '7';
+        margin-left: .5em;
+      }
+    }
 
-    &:before {
-      content: '0';
-      margin-right: .5em;
-    }
-    &:after {
-      content: '7';
-      margin-left: .5em;
-    }
   }
 
   .navbutton {
