tweak spacing of sliders

--- a/src/htdocs/css/_forms.scss
+++ b/src/htdocs/css/_forms.scss
@@ -134,7 +134,7 @@ $dist: $track-w - $thumb-d;
 div.filter {
   align-items: center;
   display: flex;
-  margin-bottom: .75em;
+  margin: 0;
 
   .max, .min {
     color: #888;
