--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -14,7 +14,7 @@ $total-bg-color: #f7f7f7;
 
     &.filter {
       font-size: 1em;
-      margin-bottom: .5em;
+      margin-bottom: 0;
       margin-top: 1.25em;
 
       &:after {
