--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -214,22 +214,6 @@ $total-bg-color: #f7f7f7;
     display: flex;
     flex-wrap: wrap;
 
-    > div {
-      margin-right: 2em;
-
-      &:last-child {
-        margin-right: -10px;
-      }
-
-      &.hide {
-        display: none;
-      }
-
-      > a img {
-        width: 180px;
-      }
-    }
-
     h4 {
       margin: 0;
       padding-bottom: 1em;
@@ -239,8 +223,36 @@ $total-bg-color: #f7f7f7;
     .dyfi img {
       margin-top: -3px;
     }
-    .earthquake h4 {
-      text-align: left;
+
+    .earthquake {
+      margin-right: 1em;
+
+      h4 {
+        text-align: left;
+      }
+    }
+
+    .hide {
+      display: none;
+    }
+
+    .scale {
+      max-width: 50%;
+
+      a {
+        display: block;
+        margin: 0 .5em;
+      }
+      canvas, img {
+        max-width: 100%;
+        width: 180px;
+      }
+
+      &:last-child {
+        a {
+          margin-right: 0;
+        }
+      }
     }
   }
 }
@@ -248,6 +260,11 @@ $total-bg-color: #f7f7f7;
 @media only screen
 and (max-width: $breakpoint-phone-width) {
   #summaryPane {
+    td {
+      padding-left: .5em;
+      padding-right: .5em;
+    }
+
     .eqid, .location {
       display: none;
     }
