set width of beachballs in css

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -7,6 +7,9 @@
 }
 
 #mapPane {
+  canvas {
+    width: 40px;
+  }
   /* hide 'placeholder' moment tensor / focal mech. beachballs */
   > canvas {
     display: none;
