--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -8,14 +8,14 @@
 
   p {
     background-color: rgba(255, 255, 120, 0.95);
-    border-top: 1px solid #eaea87;
+    border-top: 2px solid rgba(255, 255, 0, 1);
     color: #333;
     display: none;
     font-size: 20px;
     line-height: 1;
     margin: 0;
     min-height: 40px;
-    padding: 10px 0;
+    padding: 8px 0 10px;
     text-align: center;
     text-shadow: 1px 1px 3px #fffec6;
     position: absolute;
