--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -71,7 +71,9 @@ $reset-button-color: #efefef;
     }
 
     p {
+      color: #555;
       font-weight: 300;
+      letter-spacing: .015em;
       margin: .75rem 0 .25rem;
     }
   }
