--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -13,7 +13,7 @@ $total-bg-color: #f7f7f7;
     margin-bottom: 0;
 
     &.filter {
-      font-size: 1em;
+      font: 1em $font-family;
       margin-bottom: 0;
       margin-top: 1.25em;
 
@@ -91,7 +91,6 @@ $total-bg-color: #f7f7f7;
 
       &.period {
         border-bottom: 1px solid #ececec;
-        color: #000;
         font-weight: 400;
         text-align: right;
       }
