--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -9,8 +9,8 @@ $link-color: #7234dc; /*6e00ff*/
 $link-color-active: #DC406D;
 $link-color-visited: $link-color;
 
-$th-border-color: #ccc;
-$tr-border-color: #e8e8e8;
+$th-border-color: #ddd;
+$tr-border-color: #efefef;
 
 /* MMI / PAGER (impact bubbles) */
 
