--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -14,7 +14,7 @@ $total-bg-color: #f7f7f7;
 
     &.filter {
       font: 1em $font-family;
-      margin-bottom: 0;
+      margin-bottom: .5em;
       margin-top: 1.25em;
 
       &:after {
