add !important to font color

--- a/src/htdocs/css/_impactBubbles.scss
+++ b/src/htdocs/css/_impactBubbles.scss
@@ -97,60 +97,60 @@ $hover: linear-gradient(0deg, rgba(0, 0, 0, .1) 0, transparent);
 
 a.mmiI {
   background-color: $mmiI-color;
-  color: $mmiI-text-color;
+  color: $mmiI-text-color !important;
 }
 
 a.mmiII {
   background-color: $mmiII-color;
-  color: $mmiII-text-color;
+  color: $mmiII-text-color !important;
 }
 
 a.mmiIII  {
   background-color: $mmiIII-color;
-  color: $mmiIII-text-color;
+  color: $mmiIII-text-color !important;
 }
 
 a.mmiIV {
   background-color: $mmiIV-color;
-  color: $mmiIV-text-color;
+  color: $mmiIV-text-color !important;
 }
 
 a.mmiV {
   background-color: $mmiV-color;
-  color: $mmiV-text-color;
+  color: $mmiV-text-color !important;
 }
 
 a.mmiVI {
   background-color: $mmiVI-color;
-  color: $mmiVI-text-color;
+  color: $mmiVI-text-color !important;
 }
 
 a.mmiVII {
   background-color: $mmiVII-color;
-  color: $mmiVII-text-color;
+  color: $mmiVII-text-color !important;
 }
 
 a.mmiVIII {
   background-color: $mmiVIII-color;
-  color: $mmiVIII-text-color;
+  color: $mmiVIII-text-color !important;
 }
 
 a.mmiIX {
   background-color: $mmiIX-color;
-  color: $mmiIX-text-color;
+  color: $mmiIX-text-color !important;
 }
 
 a.mmiX {
   background-color: $mmiX-color;
-  color: $mmiX-text-color;
+  color: $mmiX-text-color !important;
 }
 
 a.mmiXI {
   background-color: $mmiXI-color;
-  color: $mmiXI-text-color;
+  color: $mmiXI-text-color !important;
 }
 
 a.mmiXII {
   background-color: $mmiXII-color;
-  color: $mmiXII-text-color;
+  color: $mmiXII-text-color !important;
 }
