add dotted border under abbr text

--- a/src/htdocs/css/features/_stationsFeature.scss
+++ b/src/htdocs/css/features/_stationsFeature.scss
@@ -38,6 +38,7 @@
     width: 25%;
 
     > abbr {
+      border-bottom: 1px dotted #999;
       clear: left;
       color: #999;
       cursor: help;
