--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -39,6 +39,7 @@ $reset-button-color: #efefef;
 
     fieldset {
       border: 1px solid #eee;
+      border-radius: 4px;
       margin-top: 1em;
       padding: 0 1.75em 2em;
 
