--- a/src/htdocs/css/_forms.scss
+++ b/src/htdocs/css/_forms.scss
@@ -80,6 +80,8 @@ input[type="radio"]:checked + span:before {
 
 input[type=text], input[type=number] {
   border: 1px solid #DDD;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 4px 0 hsla(0, 0%, 0%, 0.08);
   font-size: .9rem;
   margin: 0 1px 3px 0;
   outline: none;
