--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -291,6 +291,38 @@ $total-bg-color: #f7f7f7;
       }
     }
   }
+
+  .probabilities {
+    display: flex;
+
+    h4 {
+      background: #f7f7f7;
+      border-radius: 3px 3px 0 0;
+      margin: 0;
+    }
+    ul {
+      list-style: none;
+      margin: .5em 0;
+      padding: 0;
+    }
+
+    .probability {
+      border: 1px solid #ddd;
+      border-radius: 3px;
+      padding: 0;
+      margin-right: 1em;
+      text-align: center;
+      width: 6.5em;
+    }
+    .prob {
+      font-family: $mmi-font-family;
+      font-size: 1.25em;
+    }
+    .num {
+      font-size: .8em;
+      color: #666;
+    }
+  }
 }
 
 @media only screen
