--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -295,6 +295,14 @@ $total-bg-color: #f7f7f7;
   .probabilities {
     display: flex;
 
+    div {
+      border: 1px solid #ddd;
+      border-radius: 3px;
+      padding: 0;
+      margin-right: 1em;
+      text-align: center;
+      width: 6em;
+    }
     h4 {
       background: #f7f7f7;
       border-radius: 3px 3px 0 0;
@@ -302,25 +310,17 @@ $total-bg-color: #f7f7f7;
     }
     ul {
       list-style: none;
-      margin: .5em 0;
+      margin: .6em 0;
       padding: 0;
     }
 
     .probability {
-      border: 1px solid #ddd;
-      border-radius: 3px;
-      padding: 0;
-      margin-right: 1em;
-      text-align: center;
-      width: 6.5em;
-    }
-    .prob {
       font-family: $mmi-font-family;
-      font-size: 1.25em;
+      font-size: 1.4em;
     }
-    .num {
+    .expected {
       font-size: .8em;
-      color: #666;
+      color: #999;
     }
   }
 }
