--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -9,7 +9,7 @@
   p {
     background-color: rgba(255, 255, 120, 0.95);
     border-top: 2px solid rgba(255, 255, 0, 1);
-    color: #333;
+    color: $text-color;
     display: none;
     font-size: 20px;
     line-height: 1;
