--- a/src/htdocs/css/_forms.scss
+++ b/src/htdocs/css/_forms.scss
@@ -64,8 +64,8 @@ input[type="radio"] + span:before {
 }
 
 input[type="checkbox"]:checked + span:before, input[type="radio"]:checked + span:before {
-  background-color: $link-color;
-  border-color: $link-color;
+  background-color: $accent-color;
+  border-color: $accent-color;
   color: #fff;
 }
 input[type="checkbox"]:checked + span:before {
@@ -79,7 +79,7 @@ input[type="radio"]:checked + span:before {
 --------------------------------------------- */
 
 input[type=text], input[type=number] {
-  border: 1px solid #DDD;
+  border: 1px solid $border-color-lighter;
   border-radius: 4px;
   box-shadow: inset 0 1px 4px 0 hsla(0, 0%, 0%, 0.08);
   font-size: .9rem;
@@ -90,8 +90,8 @@ input[type=text], input[type=number] {
   width: 12rem;
 
   &:focus {
-    border: 1px solid $link-color;
-    box-shadow: 0 0 3px $link-color;
+    border: 1px solid $accent-color;
+    box-shadow: 0 0 3px $accent-color;
   }
   &:invalid {
     border: 1px solid #c00;
@@ -107,10 +107,10 @@ input[type=text], input[type=number] {
 --------------------------------------------- */
 
 $track-w: 18em;
-$track-h: .25em;
-$thumb-d: 1.1em;
-$track-c: $link-color;
-$track-bg: #ddd;
+$track-h: 4px;
+$thumb-d: 1.2em;
+$track-c: $accent-color;
+$track-bg: $border-color;
 $dist: $track-w - $thumb-d;
 
 @mixin track($color1, $color2) {
@@ -139,7 +139,7 @@ div.filter {
   margin: 0;
 
   .max, .min {
-    color: #666;
+    color: $text-color-lighter;
     font-size: .9em;
     font-weight: 300;
   }
@@ -166,8 +166,8 @@ div.filter {
   padding: 0;
 
   ~ output {
-    background: #fff;
-    color: #333;
+    background: $bg-color;
+    color: $text-color;
     display: block;
     left: calc(.5 * $thumb-d);
     line-height: 1;
