--- a/src/htdocs/css/_helpPane.scss
+++ b/src/htdocs/css/_helpPane.scss
@@ -28,7 +28,7 @@
   }
 
   .github {
-    border-top: 1px solid #eee;
+    border-top: 1px solid $border-color-lighter;
     margin: 2em 0 0;
     padding-top: 4px;
   }
@@ -43,9 +43,8 @@
       position: relative;
 
       &:before {
-        background: #666;
         border-radius: 50%;
-        color: #fff;
+        color: $bg-color;
         content: counter(item);
         position: absolute;
         font-size: 17px;
@@ -87,7 +86,7 @@
     min-width: 18em;
 
     h2 + ul > li {
-      border-top: 1px solid #f6f6f6;
+      border-top: 1px solid $border-color-lighter;
       padding: 0.5em 0;
 
       &:first-child {
@@ -109,7 +108,7 @@
 
     .aftershocks {
       ul {
-        color: #666;
+        color: $text-color-lighter;
       }
     }
 
@@ -119,7 +118,7 @@
 
     .mags {
       align-items: center;
-      color: #666;
+      color: $text-color-lighter;
       display: flex;
       font-size: .9em;
       justify-content: space-around;
