--- a/src/htdocs/css/_plotsPane.scss
+++ b/src/htdocs/css/_plotsPane.scss
@@ -47,9 +47,9 @@
   .js-plotly-plot {
     width: 100%;
 
-    /* Color plotly buttons, title tips using link-color */
+    /* Color plotly buttons, title tips using accent-color */
     .modebar-btn path {
-      fill: $link-color;
+      fill: $accent-color;
       opacity: 0.4;
     }
 
@@ -63,12 +63,12 @@
     }
 
     .plotly [data-title]:after {
-      background: color($link-color alpha(8%));
-      color: $link-color;
+      background: color($accent-color alpha(8%));
+      color: $accent-color;
     }
 
     .plotly [data-title]:before {
-      border-color: transparent transparent color($link-color alpha(8%));
+      border-color: transparent transparent color($accent-color alpha(8%));
     }
   }
 
