--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -195,7 +195,7 @@
     }
 
     tr {
-      transition: background .25s ease-out;
+      transition: all .25s ease-out;
     }
     tr:hover:not(.no-sort), .selected {
       background: $accent-color-lightest;
@@ -292,6 +292,7 @@
 
   .probabilities {
     display: flex;
+    line-height: 1;
 
     a {
       border: 1px solid $border-color;
@@ -301,40 +302,47 @@
       margin-right: 1em;
       text-align: center;
       text-decoration: none;
+      transition: all .35s ease-out;
       width: 6em;
 
+      abbr {
+        color: $text-color-lightest;
+        font-size: .8em;
+        display: inline-block;
+        margin-top: 5px;
+        transition: color .35s ease-out;
+      }
       h4 {
         background: $bg-color-darker;
         border-radius: 3px 3px 0 0;
         margin: 0;
+        padding: 4px 0;
+        transition: background .35s ease-out;
       }
       ul {
         list-style: none;
-        margin: .6em 0;
+        margin: .75em 0 1em;
         padding: 0;
       }
 
-      .expected {
-        color: $text-color-lightest;
-        font-size: .8em;
-      }
       .probability {
         font: 1.25em $mmi-font-family;
       }
 
       &:hover {
-        border-color: $accent-color;
+        border-color: color($accent-color tint(50%));
         color: $accent-color;
+        transition-duration: 0s;
 
+        abbr {
+          color: color($accent-color tint(40%));
+          border-color: color($accent-color tint(40%));
+          transition-duration: 0s;
+        }
         h4 {
           background: $accent-color-lightest;
         }
-
-        .expected {
-          color: $accent-color;
-        }
       }
-
       &:last-child {
         margin-right: 0;
       }
