add new variable for "dark" text

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -176,7 +176,7 @@
           visibility: hidden;
         }
         &:hover {
-          color: #000;
+          color: $text-color-darker;
         }
         &:selection {
           background: transparent;
