--- a/src/htdocs/css/_forms.scss
+++ b/src/htdocs/css/_forms.scss
@@ -136,12 +136,25 @@ $dist: $track-w - $thumb-d;
 div.filter {
   align-items: center;
   display: flex;
-  margin: 0;
+  margin: 1em 0 0;
+  position: relative;
+
+  h4 {
+    font: 1em $font-family;
+    margin: 0;
+    position: absolute;
+    top: 0;
+
+    &:after {
+      content: ':';
+    }
+  }
 
   .max, .min {
     color: $text-color-lighter;
     font-size: .9em;
     font-weight: 300;
+    margin-top: 1.5rem;
   }
   .max {
     padding-left: .75em;
@@ -224,6 +237,7 @@ div.filter {
   align-items: center;
   display: flex;
   height: 4.5em;
+  margin-top: 1.5rem;
   position: relative;
   width: $track-w;
 }
