--- a/src/htdocs/css/_helpPane.scss
+++ b/src/htdocs/css/_helpPane.scss
@@ -116,6 +116,18 @@
       display: block;
     }
 
+    .fieldnotes {
+      position: relative;
+
+      img {
+        clip: rect(0, 25px, 30px, 0);
+        position: absolute;
+        right: -2px;
+        top: 1px;
+        width: 20px;
+      }
+    }
+
     .mags {
       align-items: center;
       color: $text-color-lighter;
