add additional props/tweak formatting in fieldnotes popups

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -1,4 +1,5 @@
 @import 'mappane/_mousePosition.scss';
+@import 'features/_fieldnotesFeature.scss';
 @import 'features/_stationsFeature.scss';
 
 #mapPane,
