set link color for all popups in one place

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -47,9 +47,13 @@
   z-index: 417;
 }
 
-/* Match popup font-size to rest of app */
+/* Match popup font-size, link colors to rest of app */
 .leaflet-container {
   font-size: $font-size;
+
+  a {
+    color: $link-color;
+  }
 }
 
 /* Quell long attributions */
