popups: add toggle for custom props andd image attachments

--- a/src/htdocs/css/features/_fieldnotesFeature.scss
+++ b/src/htdocs/css/features/_fieldnotesFeature.scss
@@ -1,11 +1,23 @@
 .leaflet-popup .fieldnotes {
+  dl {
+    &.hide {
+      display: none;
+    }
+  }
   dt {
     width: 7.5em;
+  }
+  img {
+    max-width: 100%;
   }
   time {
     color: #555;
     font-size: .9em;
     margin-top: 4px;
+  }
+
+  .custom {
+    margin-top: -1em;
   }
 
   .operator {
