--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -19,6 +19,7 @@ $border-color-lighter: #efefef;
 
 $link-color: $accent-color;
 $link-color-active: #DC406D;
+$link-color-hover: $accent-color;
 $link-color-visited: $link-color;
 
 $text-color: #333;
