add whitespace between <dl> data

--- a/src/htdocs/css/features/_stationsFeature.scss
+++ b/src/htdocs/css/features/_stationsFeature.scss
@@ -24,6 +24,10 @@
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
 }
 
+.station-metadata {
+  margin: 1.5em 0;
+}
+
 .station-summary {
   display: block;
   list-style: none;
