--- a/src/htdocs/css/features/_fieldnotesFeature.scss
+++ b/src/htdocs/css/features/_fieldnotesFeature.scss
@@ -6,7 +6,11 @@
     width: 7.5em;
   }
   img {
+    display: block;
+    margin: 0 auto;
+    max-height: 300px;
     max-width: 100%;
+    min-height: 150px; /* default space for loading images to fill */
   }
   time {
     color: #555;
