--- a/src/htdocs/css/features/_fieldnotesFeature.scss
+++ b/src/htdocs/css/features/_fieldnotesFeature.scss
@@ -10,10 +10,9 @@
     margin: 0 auto;
     max-height: 300px;
     max-width: 100%;
-    min-height: 150px; /* default space for loading images to fill */
   }
   time {
-    color: #555;
+    color: $text-color-lighter;
     font-size: .9em;
     margin-top: 4px;
   }
@@ -31,6 +30,17 @@
 
     border-top: 1px solid $border-color-lighter;
     margin-top: 1.5em;
+  }
+
+  .photo {
+    display: block;
+    min-height: 200px;
+    position: relative;
+
+    img {
+      position: relative;
+      z-index: 1001;
+    }
   }
 
   .properties {
@@ -61,8 +71,31 @@
     }
   }
 
+  .spinner {
+    animation: rotate 0.75s infinite linear;
+    border: 5px solid $text-color-lighter;
+    border-radius: 50%;
+    border-right-color: transparent;
+    display: block;
+    height: 20px;
+    left: 47%;
+    position: absolute;
+    top: 47%;
+    width: 20px;
+    z-index: 1000;
+  }
+
   /* Rotate triangle down to point down when custom props are visible */
   :not(.hide):before {
     transform: rotate(90deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
