add lightbox for enlarging popup photos

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -4,6 +4,7 @@
 @import '_forms.scss';
 @import '_helpPane.scss';
 @import '_impactBubbles.scss';
+@import '_lightbox.scss';
 @import '_mapPane.scss';
 @import '_navBar.scss';
 @import '_plotsPane.scss';
