--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -97,15 +97,9 @@
   background-image: url(../img/layers@2x.png) !important;
 }
 
-.leaflet-control-zoom {
-  a {
-    line-height: 27px !important;
-  }
-
-  /* Hide zoom controls on mobile device (which has pinch-to-zoom gestures) */
-  &.hide {
-    display: none;
-  }
+/* Hide zoom controls on mobile device (which has pinch-to-zoom gestures) */
+.leaflet-control-zoom .hide {
+  display: none;
 }
 
 /* Push top controls down to accommodate toolbar */
