--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -107,6 +107,38 @@
   margin-top: 50px;
 }
 
+/* Earthquake details in Leaflet popups (also mainshock on edit, summary panes) */
+.leaflet-popup-content, .earthquake {
+  dd,
+  dt {
+    line-height: 1.7;
+  }
+  dd {
+    color: $text-color;
+    margin-left: 5em;
+  }
+  dl {
+    margin-bottom: 0;
+  }
+  dt {
+    clear: left;
+    color: $text-color-lighter;
+    display: inline-block;
+    float: left;
+    font-weight: 300;
+    letter-spacing: .015em;
+    width: 5em;
+  }
+
+  h4 {
+    margin: 0;
+  }
+
+  time {
+    display: block;
+  }
+}
+
 /* Hide attribution text on (small screen) mobile devices */
 @media only screen
   and (max-width: $breakpoint-tablet-width) {
